# python-project-83

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
page_analyzer/: app.py
page_analyzer/templates/: base.html  index.html
